#647 update depricated code