@@ -515,7 +515,7 @@ public class ProductVar {
      * @param bias        The var bias.
      */
     public void setBias(double bias) {
-        this.bias = new Double(bias);
+        this.bias = bias;
     }
 
     /**
@@ -525,7 +525,7 @@ public class ProductVar {
      */
     public void setBias(String biasStr) {
         try {
-            bias = new Double(biasStr);
+            bias = Double.valueOf(biasStr);
         } catch (NumberFormatException e) {
             bias = null;
         } catch (NullPointerException e) {
@@ -539,7 +539,7 @@ public class ProductVar {
      * @param scale        The var scale.
      */
     public void setScale(double scale) {
-        this.scale = new Double(scale);
+        this.scale = scale;
     }
 
     /**
@@ -549,7 +549,7 @@ public class ProductVar {
      */
     public void setScale(String scaleStr) {
         try {
-            scale = new Double(scaleStr);
+            scale = Double.valueOf(scaleStr);
         } catch (NumberFormatException e) {
             scale = null;
         } catch (NullPointerException e) {
@@ -563,7 +563,7 @@ public class ProductVar {
      * @param max        The var max.
      */
     public void setMax(double max) {
-        this.max = new Double(max);
+        this.max = max;
     }
 
     /**
@@ -573,7 +573,7 @@ public class ProductVar {
      */
     public void setMax(String maxStr) {
         try {
-            max = new Double(maxStr);
+            max = Double.valueOf(maxStr);
         } catch (NumberFormatException e) {
             max = null;
         } catch (NullPointerException e) {
